<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/white"
                android:textColor="@color/colorPlayer"
                android:textSize="@dimen/twenty_one_text_size" />

            <TextView
                android:id="@+id/white_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/colorScore"
                android:textSize="@dimen/fifty_six_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginTop="@dimen/twenty_four"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addOneSettlementForWhite"
                android:text="@string/settlement_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addTwoCityForWhite"
                android:text="@string/city_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addOneVPForWhite"
                android:text="@string/victory_points_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addOneArmyOrRoadForWhite"
                android:text="@string/largest_army_road_1" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/one"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen"
                android:layout_marginTop="@dimen/sixteen"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/blue"
                android:textColor="@color/colorPlayer"
                android:textSize="@dimen/twenty_one_text_size" />

            <TextView
                android:id="@+id/blue_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/colorScore"
                android:textSize="@dimen/fifty_six_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginTop="@dimen/twenty_four"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addOneSettlementForBlue"
                android:text="@string/settlement_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addTwoCityForBlue"
                android:text="@string/city_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addOneVPForBlue"
                android:text="@string/victory_points_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_four"
                android:layout_marginRight="@dimen/twenty_four"
                android:onClick="addOneArmyOrRoadForBlue"
                android:text="@string/largest_army_road_1" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:layout_marginBottom="@dimen/thirty_two"
        android:layout_marginTop="@dimen/thirty_two"/>

</RelativeLayout>

</ScrollView>